# Telepathy

./: Cargo.toml  LICENSE  README.md  build.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser.rs  sequencer.rs
fuzz/src/: lib.rs  restricted_string.rs  structured_string.rs
src/: lib.rs  main.rs
src/blua/: mod.rs  optimizer.rs  shared.rs
src/codegen/: c89.rs  lua51.rs  mod.rs  tab.rs
src/hir/: data.rs  mod.rs  parser.rs
src/hir/isle/: mod.rs  rules.isle
src/mir/: data.rs  mod.rs  registers.rs  sequencer.rs
src/syntax/: optimizer.rs  parser.rs  shared.rs
