[package]
name = "telepathy-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3.0", features = ["derive"] }
libfuzzer-sys = "0.4"

[dependencies.regioned]
git = "https://github.com/Rerumu/Regioned"
rev = "2099048"

[dependencies.telepathy]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false

[[bin]]
name = "sequencer"
path = "fuzz_targets/sequencer.rs"
test = false
doc = false
